# marketing-attribution-mmm

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.en.md  README.md  config.py  download_data.sh  pyproject.toml  requirements.txt  run_all.py
.github/workflows/: ci.yml
dashboard/: app.py
notebooks/: 01_eda.ipynb
reports/: mmm_analysis_report.md
scripts/: audit_consistency.py  budget_optimizer.py  generate_touchpoints.py  mmm_model.py  multi_touch_attribution.py  preprocess.py  preprocess_criteo.py
tests/: test_attribution.py  test_mmm.py  test_preprocess.py
