[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "marketing-attribution-mmm"
version = "1.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "ruff>=0.3.0,<1.0.0",
    "black>=23.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
